@@ -332,6 +332,7 @@ PHP if you have not done so prior to upgrading MediaWiki.
 * (bug 28254) action=paraminfo: Extract type from PARAM_DFLT if
   PARAM_TYPE is not set
 * (bug 27712) add parent_id to list=deletedrevs
+* (bug 28455) Add 'toponly' to recentchanges API module
 
 === Languages updated in 1.18 ===
 
